--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+.body__container {
+  --black: #000;
+  --white: #fff;
+  --gray: #999;
+  --font-gray: #666;
+  --light-gray: #ddd;
+  --yellow: #ffeb33;
+}
+
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, abbr, address, cite, code, del, dfn, em, img,
 ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
@@ -51,7 +60,7 @@ html, body {
 }
 
 a:visited {
-  color: #000;
+  color: var(--black);
 }
 
 .inbox {
@@ -75,7 +84,7 @@ a:visited {
   position: absolute;
   width: 100%;
   height: 41px;
-  background-color: #000;
+  background-color: var(--black);
 }
 
 .header_container::after {
@@ -97,13 +106,13 @@ a:visited {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 12px 0;
-  color: #fff;
+  color: var(--white);
   font-size: .8rem;
   min-width: 940px;
 }
 
 .header_container .topgnb a {
-  color: #fff;
+  color: var(--white);
 }
 
 .header_container .topgnb .topgnb__left {
@@ -134,7 +143,7 @@ a:visited {
   left: 0;
   width: 1px;
   height: 31px;
-  background-color: #999;
+  background-color: var(--gray);
   opacity: .6;
 }
 
@@ -143,7 +152,7 @@ a:visited {
   position: absolute;
   top: -6px;
   left: -13px;
-  color: #fff;
+  color: var(--white);
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -176,7 +185,7 @@ a:visited {
   left: 0;
   width: 1px;
   height: 31px;
-  background-color: #999;
+  background-color: var(--gray);
   opacity: .6;
 }
 
@@ -231,7 +240,7 @@ a:visited {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  background-color: #000;
+  background-color: var(--black);
 }
 
 .header_container .top .top__form form input {
@@ -257,7 +266,7 @@ a:visited {
 }
 
 .header_container .top .top__form form a svg .search_svg {
-  fill: #fff;
+  fill: var(--white);
 }
 
 .header_container .gnb {
@@ -287,7 +296,7 @@ a:visited {
 }
 
 .header_container .gnb .nav ul li a {
-  color: #000;
+  color: var(--black);
   font-size: 1.1rem;
 }
 
@@ -301,5 +310,5 @@ a:visited {
           transform: translateX(-50%);
   width: 100%;
   height: 3px;
-  background-color: #000;
+  background-color: var(--black);
 }
