--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,13 +1,4 @@
 @charset "UTF-8";
-.body__container {
-  --black: #000;
-  --white: #fff;
-  --gray: #999;
-  --font-gray: #666;
-  --light-gray: #ddd;
-  --yellow: #ffeb33;
-}
-
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, abbr, address, cite, code, del, dfn, em, img,
 ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
@@ -60,7 +51,7 @@ html, body {
 }
 
 a:visited {
-  color: var(--black);
+  color: #000;
 }
 
 .inbox {
@@ -84,7 +75,7 @@ a:visited {
   position: absolute;
   width: 100%;
   height: 41px;
-  background-color: var(--black);
+  background-color: #000;
 }
 
 .header_container::after {
@@ -106,13 +97,13 @@ a:visited {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 12px 0;
-  color: var(--white);
+  color: #fff;
   font-size: .8rem;
   min-width: 940px;
 }
 
 .header_container .topgnb a {
-  color: var(--white);
+  color: #fff;
 }
 
 .header_container .topgnb .topgnb__left {
@@ -143,7 +134,7 @@ a:visited {
   left: 0;
   width: 1px;
   height: 31px;
-  background-color: var(--gray);
+  background-color: #999;
   opacity: .6;
 }
 
@@ -152,7 +143,7 @@ a:visited {
   position: absolute;
   top: -6px;
   left: -13px;
-  color: var(--white);
+  color: #fff;
   font-size: 1.2rem;
   font-weight: bold;
 }
@@ -185,7 +176,7 @@ a:visited {
   left: 0;
   width: 1px;
   height: 31px;
-  background-color: var(--gray);
+  background-color: #999;
   opacity: .6;
 }
 
@@ -240,7 +231,7 @@ a:visited {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  background-color: var(--black);
+  background-color: #000;
 }
 
 .header_container .top .top__form form input {
@@ -266,7 +257,7 @@ a:visited {
 }
 
 .header_container .top .top__form form a svg .search_svg {
-  fill: var(--white);
+  fill: #fff;
 }
 
 .header_container .gnb {
@@ -296,7 +287,7 @@ a:visited {
 }
 
 .header_container .gnb .nav ul li a {
-  color: var(--black);
+  color: #000;
   font-size: 1.1rem;
 }
 
@@ -310,5 +301,5 @@ a:visited {
           transform: translateX(-50%);
   width: 100%;
   height: 3px;
-  background-color: var(--black);
+  background-color: #000;
 }
